@@ -1810,8 +1810,8 @@ On: 1.1 * 1.1 ≈ 1.2</property>
                             <property name="use_underline">True</property>
                           </object>
                         </child>
-                        <accelerator key="K" signal="activate" modifiers="GDK_CONTROL_MASK"/>
                         <accelerator key="k" signal="activate" modifiers="GDK_MOD1_MASK"/>
+                        <accelerator key="K" signal="activate" modifiers="GDK_CONTROL_MASK"/>
                       </object>
                       <packing>
                         <property name="expand">False</property>
@@ -1835,8 +1835,8 @@ On: 1.1 * 1.1 ≈ 1.2</property>
                             <property name="use_underline">True</property>
                           </object>
                         </child>
-                        <accelerator key="H" signal="activate" modifiers="GDK_CONTROL_MASK"/>
                         <accelerator key="h" signal="activate" modifiers="GDK_MOD1_MASK"/>
+                        <accelerator key="H" signal="activate" modifiers="GDK_CONTROL_MASK"/>
                       </object>
                       <packing>
                         <property name="expand">False</property>
@@ -1860,8 +1860,8 @@ On: 1.1 * 1.1 ≈ 1.2</property>
                             <property name="use_underline">True</property>
                           </object>
                         </child>
-                        <accelerator key="o" signal="activate" modifiers="GDK_CONTROL_MASK"/>
                         <accelerator key="o" signal="activate" modifiers="GDK_MOD1_MASK"/>
+                        <accelerator key="o" signal="activate" modifiers="GDK_CONTROL_MASK"/>
                       </object>
                       <packing>
                         <property name="expand">True</property>
@@ -2958,11 +2958,10 @@ On: 1.1 * 1.1 ≈ 1.2</property>
                             <child>
                               <object class="GtkButton" id="button_registerup">
                                 <property name="visible">True</property>
-                                <property name="sensitive">False</property>
                                 <property name="can_focus">True</property>
                                 <property name="focus_on_click">False</property>
                                 <property name="receives_default">False</property>
-                                <property name="tooltip_text" translatable="yes">Move selected register up</property>
+                                <property name="tooltip_text" translatable="yes">Rotate the stack or move selected register up.</property>
                                 <signal name="clicked" handler="on_button_registerup_clicked" swapped="no"/>
                                 <child>
                                   <object class="GtkImage" id="image1419">
@@ -2981,11 +2980,10 @@ On: 1.1 * 1.1 ≈ 1.2</property>
                             <child>
                               <object class="GtkButton" id="button_registerdown">
                                 <property name="visible">True</property>
-                                <property name="sensitive">False</property>
                                 <property name="can_focus">True</property>
                                 <property name="focus_on_click">False</property>
                                 <property name="receives_default">False</property>
-                                <property name="tooltip_text" translatable="yes">Move selected register down</property>
+                                <property name="tooltip_text" translatable="yes">Rotate the stack or move selected register down.</property>
                                 <signal name="clicked" handler="on_button_registerdown_clicked" swapped="no"/>
                                 <child>
                                   <object class="GtkImage" id="image1424">
@@ -3002,13 +3000,35 @@ On: 1.1 * 1.1 ≈ 1.2</property>
                               </packing>
                             </child>
                             <child>
+                              <object class="GtkButton" id="button_registerswap">
+                                <property name="visible">True</property>
+                                <property name="can_focus">True</property>
+                                <property name="focus_on_click">False</property>
+                                <property name="receives_default">False</property>
+                                <property name="tooltip_text" translatable="yes">Swap the to top values or swap the selected value with the top value.</property>
+                                <signal name="clicked" handler="on_button_registerswap_clicked" swapped="no"/>
+                                <child>
+                                  <object class="GtkImage" id="image1">
+                                    <property name="visible">True</property>
+                                    <property name="can_focus">False</property>
+                                    <property name="icon_name">view-refresh</property>
+                                  </object>
+                                </child>
+                              </object>
+                              <packing>
+                                <property name="expand">False</property>
+                                <property name="fill">False</property>
+                                <property name="position">2</property>
+                              </packing>
+                            </child>
+                            <child>
                               <object class="GtkButton" id="button_editregister">
                                 <property name="visible">True</property>
                                 <property name="sensitive">False</property>
                                 <property name="can_focus">True</property>
                                 <property name="focus_on_click">False</property>
                                 <property name="receives_default">False</property>
-                                <property name="tooltip_text" translatable="yes">Edit value of selected register</property>
+                                <property name="tooltip_text" translatable="yes">Edit the selected value.</property>
                                 <signal name="clicked" handler="on_button_editregister_clicked" swapped="no"/>
                                 <child>
                                   <object class="GtkImage" id="image1421">
@@ -3021,17 +3041,16 @@ On: 1.1 * 1.1 ≈ 1.2</property>
                               <packing>
                                 <property name="expand">False</property>
                                 <property name="fill">False</property>
-                                <property name="position">2</property>
+                                <property name="position">3</property>
                               </packing>
                             </child>
                             <child>
                               <object class="GtkButton" id="button_deleteregister">
                                 <property name="visible">True</property>
-                                <property name="sensitive">False</property>
                                 <property name="can_focus">True</property>
                                 <property name="focus_on_click">False</property>
                                 <property name="receives_default">False</property>
-                                <property name="tooltip_text" translatable="yes">Delete selected register</property>
+                                <property name="tooltip_text" translatable="yes">Delete the top or selected value.</property>
                                 <signal name="clicked" handler="on_button_deleteregister_clicked" swapped="no"/>
                                 <child>
                                   <object class="GtkImage" id="image1422">
@@ -3044,7 +3063,7 @@ On: 1.1 * 1.1 ≈ 1.2</property>
                               <packing>
                                 <property name="expand">False</property>
                                 <property name="fill">False</property>
-                                <property name="position">3</property>
+                                <property name="position">4</property>
                               </packing>
                             </child>
                             <child>
@@ -3054,7 +3073,7 @@ On: 1.1 * 1.1 ≈ 1.2</property>
                                 <property name="can_focus">True</property>
                                 <property name="focus_on_click">False</property>
                                 <property name="receives_default">False</property>
-                                <property name="tooltip_text" translatable="yes">Clear the RPN stack</property>
+                                <property name="tooltip_text" translatable="yes">Clear the RPN stack.</property>
                                 <signal name="clicked" handler="on_button_clearstack_clicked" swapped="no"/>
                                 <child>
                                   <object class="GtkImage" id="image1423">
@@ -3067,7 +3086,7 @@ On: 1.1 * 1.1 ≈ 1.2</property>
                               <packing>
                                 <property name="expand">False</property>
                                 <property name="fill">False</property>
-                                <property name="position">4</property>
+                                <property name="position">5</property>
                               </packing>
                             </child>
                           </object>
@@ -3337,6 +3356,9 @@ This can be overridden by prepending the unit expression with "?" or "0".</prope
           </packing>
         </child>
       </object>
+    </child>
+    <child type="titlebar">
+      <placeholder/>
     </child>
   </object>
   <object class="GtkMenu" id="popup_menu_resultview">
