@@ -1,3 +1,7 @@
+2017-02-18 Hanna Knutsson <hanna_k@fmgirl.com>
+
+	* Add swap button, use up/down buttons for rotation if no selection and remove top of the stack with delete button if no selection
+
 2016-12-09 Hanna Knutsson <hanna_k@fmgirl.com>
 
 	* Replace deprecated gtk_menu_popup with gtk_menu_popup_at_pointer for gtk >= 3.22
